# python-random-scripts

./: .gitignore  README.md  build_battery_report.py  build_find_duplicates.py  build_js_dev_setup.py  build_nef_to_jpg.py  build_sort_by_extension.py  build_sort_by_type.py  build_toolbox_launcher.py  build_video_compressor.py  hello_entry.py  pyproject.toml
.github/: copilot-instructions.md
scripts/: battery_report.py  example_tool.py  find_duplicates.py  js_dev_setup.py  nef_to_jpg.py  organize_photos.py  sort_by_extension.py  sort_by_type.py  toolbox_launcher.py  video_compressor.py
src/mytools/: cli.py
